--- a/style.css
+++ b/style.css
@@ -2349,6 +2349,9 @@ object {
   margin-left: -1rem;
   margin-right: -1rem; }
 
+.alignwide.wp-block-image {
+  max-width: inherit; }
+
 .alignfull {
   width: 100vw !important;
   max-width: 100vw !important;
